vault backup: 2022-11-07 14:06:03
Affected files:
.obsidian_mac/workspace.json
index/java/java tips.md